# nonebot_plugin_AL

./: .gitignore  README.md  __init__.py  bili.py  pyproject.toml  ship.json
.github/workflows/: python-publish.yml
nonebot_plugin_al/: 1.py  __init__.py  api.py  bili.py  config.py  draw.py  name.py  send_message.py  utils.py
nonebot_plugin_al/data/: eq.json
test/: api.py  get_ship_name.py  新泽西 - 副本 copy.html  新泽西 - 副本.html  新泽西.html
