[tool.poetry]
name = "nonebot_plugin_al"
version = "0.3.9"
description = "Azuer L plugin for NoneBot2"
authors = ["Agnes_Digital <Z735803792@163.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Agnes4m/nonebot_plugin_AL"
repository = "https://github.com/Agnes4m/nonebot_plugin_AL"
keywords = ["game", "nonebot2", "plugin","bilibili"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
include = [
    "LICENSE","README.md"
]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0"
nonebot-adapter-onebot = ">=2.2.1"
nonebot_plugin_htmlrender = "^0.2.0.3"
aiohttp = ">=3.8.3"
pillow = "^9.5.0"
bs4 = "^0.0.1"
aiofiles = "^23.1.0"
pypinyin = "^0.49.0"
imgkit = "^1.2.3"
opencv-python = "^4.7.0"
"ruamel.yaml" = "^0.17.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
